agregado método de notificarUsuarioNoValido
